--- a/Sprint3/Task0.ipynb
+++ b/Sprint3/Task0.ipynb
@@ -87,8 +87,55 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется 100 km/h.\n",
+      "Мотоцикл движется 100 km/h.\n",
+      "Транспорт движется 100 km/h.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle //базовый класс\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Car, переопределяющий метод Drive()\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Motorcycle, также переопределяющий метод Drive()\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "List<Vehicle> vehicles = new List<Vehicle>\n",
+    "{\n",
+    "    new Car(),\n",
+    "    new Motorcycle(),\n",
+    "    new Vehicle() // Добавляем экземпляр базового класса для демонстрации\n",
+    "};\n",
+    "\n",
+    "foreach (var vehicle in vehicles)\n",
+    "{\n",
+    "    vehicle.Drive(100); // Вызываем метод Drive() \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,8 +159,79 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Феликс говорит МяуМяу\n",
+      "Тимошуа говорит ГавГав\n",
+      "крысуа говорит PfrPfr\n",
+      "Манки говорит Бубузьяна\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public string Name { get; set;}\n",
+    "    public virtual void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Абстрактный клич {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит МяуМяу\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит ГавГав\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Rat : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит PfrPfr\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Monkey : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит Бубузьяна\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat cat = new Cat();\n",
+    "cat.Name = \"Феликс\";\n",
+    "cat.GetRoal();\n",
+    "\n",
+    "Dog dog = new Dog();\n",
+    "dog.Name = \"Тимошуа\";\n",
+    "dog.GetRoal();\n",
+    "\n",
+    "Rat rat = new Rat();\n",
+    "rat.Name = \"крысуа\";\n",
+    "rat.GetRoal();\n",
+    "\n",
+    "Monkey monkey = new Monkey();\n",
+    "monkey.Name = \"Манки\";\n",
+    "monkey.GetRoal();\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
