--- a/Sprint3/Task1.ipynb
+++ b/Sprint3/Task1.ipynb
@@ -173,8 +173,71 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт движется 60 km/h.\n",
+      "Автомобиль движется в Eco режиме.\n",
+      "Автомобиль переключает передачи вручную.\n",
+      "1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class ExampleClass\n",
+    "{\n",
+    "    public void Print(int number)\n",
+    "    {\n",
+    "        Console.WriteLine(number);\n",
+    "    }\n",
+    "\n",
+    "    public void Print(double number)\n",
+    "    {\n",
+    "        Console.WriteLine(number.ToString());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Vehicle\n",
+    "{\n",
+    "    // Метод Drive(), принимающий int\n",
+    "    public void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий string\n",
+    "    public void Drive(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется в {mode} режиме.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий bool\n",
+    "    public void Drive(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль переключает передачи вручную.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль оснащен автоматической коробкой передач.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "\n",
+    "myVehicle.Drive(60); // Вызов метода Drive() с int параметром\n",
+    "myVehicle.Drive(\"Eco\"); // Вызов метода Drive() с string параметром\n",
+    "myVehicle.Drive(true); // Вызов метода Drive() с bool параметром\n",
+    "\n",
+    "ExampleClass A = new ExampleClass();\n",
+    "A.Print(1);\n",
+    "A.Print(-1);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,8 +261,97 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Феликс говорит МяуМяу\n",
+      "Ваш котик грустит :/ \n",
+      "Тимошуа говорит ГавГав\n",
+      "крысуа говорит PfrPfr\n",
+      "Манки говорит Бубузьяна\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public string Name { get; set;}\n",
+    "    public virtual void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Абстрактный клич {Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void HappyLevel(int happy)\n",
+    "    {\n",
+    "        Console.WriteLine($\"уровень счастья {happy}\");\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит МяуМяу\");\n",
+    "    }\n",
+    "\n",
+    "    public override void HappyLevel(int happy)\n",
+    "    {\n",
+    "        Console.WriteLine($\"уровень счастья {happy}\");\n",
+    "    }\n",
+    "    public void HappyLevel(double happy)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Ваш котик грустит :/ \");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит ГавГав\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Rat : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит PfrPfr\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Monkey : Animal\n",
+    "{\n",
+    "    public override void GetRoal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} говорит Бубузьяна\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat cat = new Cat();\n",
+    "cat.Name = \"Феликс\";\n",
+    "cat.GetRoal();\n",
+    "cat.HappyLevel(-100);\n",
+    "\n",
+    "\n",
+    "Dog dog = new Dog();\n",
+    "dog.Name = \"Тимошуа\";\n",
+    "dog.GetRoal();\n",
+    "\n",
+    "Rat rat = new Rat();\n",
+    "rat.Name = \"крысуа\";\n",
+    "rat.GetRoal();\n",
+    "\n",
+    "Monkey monkey = new Monkey();\n",
+    "monkey.Name = \"Манки\";\n",
+    "monkey.GetRoal();\n"
+   ]
   }
  ],
  "metadata": {
