--- a/Sprint3/Task2.ipynb
+++ b/Sprint3/Task2.ipynb
@@ -140,8 +140,69 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака лает\n",
+      "Кошка мяукает\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Animal {\n",
+    "\n",
+    "    public virtual void MakeSound() {\n",
+    "\n",
+    "        Console.WriteLine(\"Животное издает звук\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal {\n",
+    "\n",
+    "    public override void MakeSound() {\n",
+    "        \n",
+    "        Console.WriteLine(\"Собака лает\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal {\n",
+    "\n",
+    "    public override void MakeSound() {\n",
+    "        \n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AnimalCollection<T> where T : Animal {\n",
+    "\n",
+    "    private List<T> _animals = new List<T>();\n",
+    "\n",
+    "    public void Add(T animal) {\n",
+    "        _animals.Add(animal);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T animal) {\n",
+    "        _animals.Remove(animal);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayAnimals() {\n",
+    "\n",
+    "        foreach (var animal in _animals) {\n",
+    "            animal.MakeSound();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "AnimalCollection<Animal> myAnimals = new AnimalCollection<Animal>();\n",
+    "myAnimals.Add(new Dog());\n",
+    "myAnimals.Add(new Cat());\n",
+    "myAnimals.DisplayAnimals();"
+   ]
   }
  ],
  "metadata": {
