--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 6\n"
    ]
   },
   {
@@ -26,7 +26,30 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "\n",
+    "Создать базовый класс Movie в C#, который будет представлять информацию о \n",
+    "фильмах. На основе этого класса разработать 2-3 производных класса, \n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов \n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены \n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "Требования к базовому классу Movie:\n",
+    "• Атрибуты: Название (Title), Режиссер (Director), Год выпуска (ReleaseYear).\n",
+    "• Методы:\n",
+    "o GetInfo(): метод для получения информации о фильме в виде строки.\n",
+    "o Watch(): метод для вывода сообщения о просмотре фильма.\n",
+    "o Rate(): метод для оценки фильма.\n",
+    "Требования к производным классам:\n",
+    "1. Документальный фильм (Documentary): Должен содержать дополнительные \n",
+    "атрибуты, такие как Тематика (Theme). Метод Watch() должен быть \n",
+    "переопределен для добавления информации о тематике при просмотре \n",
+    "документального фильма.\n",
+    "2. Игровой фильм (FeatureFilm): Должен содержать дополнительные атрибуты, \n",
+    "такие как Жанр (Genre). Метод Rate() должен быть переопределен для \n",
+    "добавления логики оценки в зависимости от жанра.\n",
+    "3. Анимационный фильм (AnimatedMovie) (если требуется третий класс): \n",
+    "Должен содержать дополнительные атрибуты, такие как Студия анимации \n",
+    "(AnimationStudio). Метод GetInfo() должен быть переопределен для \n",
+    "включения информации о студии анимации в описании фильма.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) и реализуйте полиморфизм с перекрытием и прегегрузкой методов, а также generic классы"
@@ -52,8 +75,173 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Фильм: Зарождение Земли, Режиссер: NASA, Год выпуска: 2021\n",
+      "Зарождение Земли был просмотрен\n",
+      "Тема фильма: Наука\n",
+      "Рейтинг фильма Зарождение Земли: 10/10\n",
+      "Вы перешли в категорию Документальные фильмы\n",
+      "Вы перешли в категорию 1\n",
+      "\n",
+      "Информация о фильме-фантастике:\n",
+      "Фильм: Война миров Z, Режиссер: Марк Форстер, Год выпуска: 2013\n",
+      "\n",
+      "Информация о мультфильме:\n",
+      "Фильм: Головоломvка 2, Режиссер: Келс Манн, Год выпуска: 2024\n",
+      "Студия анимации: Pixar\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public interface IMovie\n",
+    "{\n",
+    "    void GetInfo();\n",
+    "}\n",
+    "\n",
+    "public interface IWatch\n",
+    "{\n",
+    "    void Watch();\n",
+    "}\n",
+    "\n",
+    "public interface IRate\n",
+    "{\n",
+    "    void Rate(int rating);\n",
+    "}\n",
+    "\n",
+    "public class Movie : IMovie, IWatch, IRate //множественное наследование\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Director { get; set; }\n",
+    "    public int ReleaseYear { get; set; }\n",
+    "    public decimal Budget { get; set; }\n",
+    "    public decimal BoxOfficeRevenue { get; set; }\n",
+    "\n",
+    "    public int RuntimeLength { get; set; } // Новый атрибут для длительности фильма\n",
+    "    public int ProductionCost { get; set; } // Новый атрибут для затрат на производство\n",
+    "    public string IsAwardWinner { get; set; } // Новый атрибут для информации о наградах\n",
+    "\n",
+    "    public virtual void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Фильм: {Title}, Режиссер: {Director}, Год выпуска: {ReleaseYear}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Watch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Title} был просмотрен\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Rate(int rating)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Рейтинг фильма {Title}: {rating}/10\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual decimal CalculateProfit()\n",
+    "    {\n",
+    "        return BoxOfficeRevenue - Budget;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ProInf()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Длительность: {RuntimeLength} , затраты на производство {ProductionCost} , награды {IsAwardWinner}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class MovieCategories : Movie\n",
+    "{\n",
+    "     public string Categories { get; set; }\n",
+    "\n",
+    "     public virtual void InfoCategories()\n",
+    "     {\n",
+    "        Console.WriteLine($\"Вы перешли в категорию {Categories}\");\n",
+    "     }\n",
+    "\n",
+    "     public virtual void InfoCategories(int categories)\n",
+    "     {\n",
+    "        Console.WriteLine($\"Вы перешли в категорию {categories}\"); //Перегрузка\n",
+    "     }\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Documentary : MovieCategories \n",
+    "{\n",
+    "    public string Theme { get; set; }\n",
+    "\n",
+    "    public override void Watch()  \n",
+    "    {\n",
+    "        base.Watch();\n",
+    "        Console.WriteLine($\"Тема фильма: {Theme}\"); //переопределение\n",
+    "    }\n",
+    "}\n",
+    "public class FeatureFilm : MovieCategories\n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "\n",
+    "    public override void Rate(int rating)\n",
+    "    {\n",
+    "        base.Rate(rating);\n",
+    "        Console.WriteLine($\"Жанр фильма: {Genre}\");\n",
+    "    }\n",
+    "}\n",
+    "public class AnimatedMovie : MovieCategories\n",
+    "{\n",
+    "    public string AnimationStudio { get; set; }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine($\"Студия анимации: {AnimationStudio}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class GenericMovie<T> where T : IMovie\n",
+    "{\n",
+    "    private T _movie;\n",
+    "\n",
+    "    public GenericMovie(T movie)\n",
+    "    {\n",
+    "        _movie = movie;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayMovieInfo()\n",
+    "    {\n",
+    "        _movie.GetInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "var documentary = new Documentary { Title = \"Зарождение Земли\", Director = \"NASA\", ReleaseYear = 2021, Theme = \"Наука\", Categories = \"Документальные фильмы\" };\n",
+    "var featureFilm = new FeatureFilm { Title = \"Война миров Z\", Director = \"Марк Форстер\", ReleaseYear = 2013, Genre = \"приключения, боевик, ужасы, фантастика\", Categories = \"Фантастика\" };\n",
+    "var animatedMovie = new AnimatedMovie { Title = \"Головоломvка 2\", Director = \"Келс Манн\", ReleaseYear = 2024, AnimationStudio = \"Pixar\", Categories = \"Мультфильмы\" };\n",
+    "\n",
+    "\n",
+    "documentary.GetInfo(); \n",
+    "documentary.Watch();\n",
+    "documentary.Rate(10);\n",
+    "documentary.InfoCategories();\n",
+    "documentary.InfoCategories(1);\n",
+    "\n",
+    "\n",
+    "var featureFilmGeneric = new GenericMovie<FeatureFilm>(featureFilm);\n",
+    "var animatedMovieGeneric = new GenericMovie<AnimatedMovie>(animatedMovie);\n",
+    "\n",
+    "// Вывод информации о фильмах\n",
+    "//documentaryGeneric.DisplayMovieInfo();\n",
+    "\n",
+    "Console.WriteLine(\"\\nИнформация о фильме-фантастике:\");\n",
+    "featureFilmGeneric.DisplayMovieInfo();\n",
+    "\n",
+    "Console.WriteLine(\"\\nИнформация о мультфильме:\");\n",
+    "animatedMovieGeneric.DisplayMovieInfo();\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
