--- a/Sprint4/Task0.ipynb
+++ b/Sprint4/Task0.ipynb
@@ -158,8 +158,114 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toyota Camry запущен.\n",
+      "Автомобиль готов к поездке.\n",
+      "Автомобиль разгоняется до 50 км/ч.\n",
+      "Текущая скорость: 50 км/ч\n",
+      "Harley-Davidson Street запущен.\n",
+      "Мотоцикл готов к поездке.\n",
+      "Мотоцикл рычит!\n",
+      "Harley-Davidson Street остановлен.\n",
+      "Мотоцикл полностью остановлен.\n"
+     ]
+    }
+   ],
+   "source": [
+    "//Пример интерфейса\n",
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "//абстрактный класс, который будет предоставлять базовые свойства\n",
+    "public abstract class Vehicle : IVehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public virtual void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "//классы, которые будут реализовывать интерфейс \n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Автомобиль готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Автомобиль полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int amount)\n",
+    "    {\n",
+    "        currentSpeed += amount;\n",
+    "        Console.WriteLine($\"Автомобиль разгоняется до {currentSpeed} км/ч.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//классы, которые будут реализовывать интерфейс \n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public bool HasSidecar { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Мотоцикл готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Мотоцикл полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RevEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "IVehicle myCar = new Car { Make = \"Toyota\", Model = \"Camry\", NumberOfDoors = 4 };\n",
+    "myCar.Start();\n",
+    "((Car)myCar).Accelerate(50);\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
+    "        \n",
+    "IVehicle myMotorcycle = new Motorcycle { Make = \"Harley-Davidson\", Model = \"Street\", HasSidecar = false };\n",
+    "myMotorcycle.Start();\n",
+    "((Motorcycle)myMotorcycle).RevEngine();\n",
+    "myMotorcycle.Stop();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,8 +289,125 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Шустрик Мейн-кун передвигается.\n",
+      "Котик готов бежать за мышкой\n",
+      "Котик разогнался до: 0 км/ч\n"
+     ]
+    }
+   ],
+   "source": [
+    "//Пример интерфейса\n",
+    "public interface IAnimal\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "//абстрактный класс, который будет предоставлять базовые свойства\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public string Poroda { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public virtual void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Name} {Poroda} передвигается.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Name} {Poroda} не двигается.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//классы, которые будут реализовывать интерфейс \n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public int bones { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Собака встала\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Собака лежит\");\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int amount)\n",
+    "    {\n",
+    "        currentSpeed += amount;\n",
+    "        Console.WriteLine($\"Собака разгоняется до {currentSpeed} м/с.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//классы, которые будут реализовывать интерфейс \n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public int Milk { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Котик готов бежать за мышкой\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Котик поймал мышку\");\n",
+    "    }\n",
+    "\n",
+    "    public void CatHappy()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Котик счастлив на {Milk}%\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Model : Animal\n",
+    "{\n",
+    "    public int Banana { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Манки готова прыгнуть на ветку\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Манки прыгнула на ветку\");\n",
+    "    }\n",
+    "\n",
+    "    public void MonkeyBanana()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Манки есть банана \");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal myCat = new Cat { Name = \"Шустрик\", Poroda = \"Мейн-кун\", Milk = 50};\n",
+    "myCat.Start();\n",
+    "Console.WriteLine($\"Котик разогнался до: {myCat.GetCurrentSpeed()} км/ч\");\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
