--- a/Sprint4/Task1.ipynb
+++ b/Sprint4/Task1.ipynb
@@ -198,7 +198,85 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "//пример интерфейса\n",
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "//Интерфейсы могут наследовать друг от друга\n",
+    "public interface IMotorizedVehicle : IVehicle\n",
+    "{\n",
+    "    void RevEngine();\n",
+    "}\n",
+    "\n",
+    "//Интерфейсы могут быть реализованы в базовых классах и наследоваться в производных классах.\n",
+    "public abstract class Vehicle : IVehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public abstract void Start();  // Оставляем абстрактным\n",
+    "    public abstract void Stop();   // Оставляем абстрактным\n",
+    "\n",
+    "    // Неявная реализация метода\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//реализация интерфейса в производном классе(наследование)\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    // Явная реализация интерфейса\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//класс теперь может реализовать все методы из обоих интерфейсов \n",
+    "public class Motorcycle : Vehicle, IMotorizedVehicle\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} мотоцикл запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} мотоцикл остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RevEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IVehicle myCar = new Car { Make = \"Toyota\", Model = \"Camry\" };\n",
+    "myCar.Start();\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
+    "        \n",
+    "IVehicle myMotorcycle = new Motorcycle { Make = \"Harley-Davidson\", Model = \"Street\" };\n",
+    "myMotorcycle.Start();\n",
+    "((Motorcycle)myMotorcycle).RevEngine();\n",
+    "myMotorcycle.Stop();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,8 +300,104 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Феликс двигается\n",
+      "Феликс лежит\n",
+      "Возраст: 10\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void Start(); // MakeSound\n",
+    "    void Stop(); // Move()\n",
+    "    int Info();\n",
+    "}\n",
+    "\n",
+    "public class Dog : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    // Явная реализация интерфейса\n",
+    "    void IAnimal.Start()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} двигается\");\n",
+    "    }\n",
+    "\n",
+    "    void IAnimal.Stop()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лежит\");\n",
+    "    }\n",
+    "\n",
+    "    // Неявная реализация метода\n",
+    "    public int Info()\n",
+    "    {\n",
+    "        return Age;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public abstract void Start();  // Оставляем абстрактным\n",
+    "    public abstract void Stop();   // Оставляем абстрактным\n",
+    "\n",
+    "    public virtual int Info()\n",
+    "    {\n",
+    "        return Age;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IMammal : IAnimal\n",
+    "{\n",
+    "    void Groom();\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} прыгает на кроватку.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} лежит.\");\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} летает.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} не летает.\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "IAnimal dog = new Dog { Name = \"Феликс\", Age = 10};\n",
+    "dog.Start(); \n",
+    "dog.Stop();      \n",
+    "Console.WriteLine($\"Возраст: {dog.Info()}\"); \n",
+    "Console.WriteLine();"
+   ]
   }
  ],
  "metadata": {
