--- a/Sprint4/Task2.ipynb
+++ b/Sprint4/Task2.ipynb
@@ -164,92 +164,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Toyota Camry запущен.\n",
-      "Текущая скорость: 0 км/ч\n",
-      "Harley-Davidson Street мотоцикл запущен.\n",
-      "Мотоцикл рычит!\n",
-      "Harley-Davidson Street мотоцикл остановлен.\n"
+      "Машина запущена.\n",
+      "У этого транспортного средства 4 колеса.\n",
+      "Машина остановлена.\n",
+      "Мотоцикл запущен.\n",
+      "У этого транспортного средства 2 колеса.\n",
+      "Мотоцикл остановлен.\n"
      ]
     }
    ],
    "source": [
-    "//пример интерфейса\n",
+    "//Пример интерфейса\n",
     "public interface IVehicle\n",
     "{\n",
-    "    void Start();\n",
-    "    void Stop();\n",
-    "    int GetCurrentSpeed();\n",
+    "    void Start();            // Метод для запуска транспортного средства\n",
+    "    void Stop();             // Метод для остановки транспортного средства\n",
+    "    int GetNumberOfWheels(); // Метод для получения количества колес\n",
     "}\n",
-    "\n",
-    "//Интерфейсы могут наследовать друг от друга\n",
-    "public interface IMotorizedVehicle : IVehicle\n",
+    "//Реализация интерфейса\n",
+    "public class Car : IVehicle\n",
     "{\n",
-    "    void RevEngine();\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина запущена.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина остановлена.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 4; // У машины 4 колеса\n",
+    "    }\n",
     "}\n",
     "\n",
-    "//Интерфейсы могут быть реализованы в базовых классах и наследоваться в производных классах.\n",
-    "public abstract class Vehicle : IVehicle\n",
+    "public class Motorcycle : IVehicle\n",
     "{\n",
-    "    public string Make { get; set; }\n",
-    "    public string Model { get; set; }\n",
-    "    protected int currentSpeed;\n",
-    "\n",
-    "    public abstract void Start();  // Оставляем абстрактным\n",
-    "    public abstract void Stop();   // Оставляем абстрактным\n",
-    "\n",
-    "    // Неявная реализация метода\n",
-    "    public virtual int GetCurrentSpeed()\n",
+    "    public void Start()\n",
     "    {\n",
-    "        return currentSpeed;\n",
+    "        Console.WriteLine(\"Мотоцикл запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 2; // У мотоцикла 2 колеса\n",
     "    }\n",
     "}\n",
     "\n",
-    "//реализация интерфейса в производном классе(наследование)\n",
-    "public class Car : Vehicle\n",
+    "//Создадим класс VehicleService, который будет зависеть от интерфейса IVehicle\n",
+    "public class VehicleService\n",
     "{\n",
-    "    // Явная реализация интерфейса\n",
-    "    public override void Start()\n",
+    "    private readonly IVehicle _vehicle;\n",
+    "\n",
+    "    // Внедрение зависимости через конструктор\n",
+    "    public VehicleService(IVehicle vehicle)\n",
     "    {\n",
-    "        currentSpeed = 0;\n",
-    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "        _vehicle = vehicle; \n",
     "    }\n",
     "\n",
-    "    public override void Stop()\n",
+    "    public void UseVehicle()\n",
     "    {\n",
-    "        currentSpeed = 0;\n",
-    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "//класс теперь может реализовать все методы из обоих интерфейсов \n",
-    "public class Motorcycle : Vehicle, IMotorizedVehicle\n",
-    "{\n",
-    "    public override void Start()\n",
-    "    {\n",
-    "        currentSpeed = 0;\n",
-    "        Console.WriteLine($\"{Make} {Model} мотоцикл запущен.\");\n",
-    "    }\n",
-    "\n",
-    "    public override void Stop()\n",
-    "    {\n",
-    "        currentSpeed = 0;\n",
-    "        Console.WriteLine($\"{Make} {Model} мотоцикл остановлен.\");\n",
-    "    }\n",
-    "\n",
-    "    public void RevEngine()\n",
-    "    {\n",
-    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "        _vehicle.Start(); // Запускаем транспортное средство\n",
+    "        Console.WriteLine($\"У этого транспортного средства {_vehicle.GetNumberOfWheels()} колеса.\");\n",
+    "        _vehicle.Stop(); // Останавливаем транспортное средство\n",
     "    }\n",
     "}\n",
     "\n",
-    "IVehicle myCar = new Car { Make = \"Toyota\", Model = \"Camry\" };\n",
-    "myCar.Start();\n",
-    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
-    "        \n",
-    "IVehicle myMotorcycle = new Motorcycle { Make = \"Harley-Davidson\", Model = \"Street\" };\n",
-    "myMotorcycle.Start();\n",
-    "((Motorcycle)myMotorcycle).RevEngine();\n",
-    "myMotorcycle.Stop();"
+    "IVehicle myCar = new Car(); // Создаем объект машины\n",
+    "VehicleService carService = new VehicleService(myCar); // Передаем машину в сервис\n",
+    "carService.UseVehicle(); // Используем сервис с машиной\n",
+    "\n",
+    "IVehicle myMotorcycle = new Motorcycle(); // Создаем объект мотоцикла\n",
+    "VehicleService motorcycleService = new VehicleService(myMotorcycle); // Передаем мотоцикл в сервис\n",
+    "motorcycleService.UseVehicle(); // Используем сервис с мотоциклом"
    ]
   },
   {
@@ -274,109 +268,122 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака бежит\n",
+      "У этого животного 4 лапы.\n",
+      "Собака лежит\n",
+      "\n",
+      "Кошка бежит\n",
+      "У этого животного 4 лапы.\n",
+      "Кошка лежит\n",
+      "\n",
+      "птичка летит\n",
+      "У этого животного 2 лапы.\n",
+      "птичка не летит\n"
+     ]
+    }
+   ],
    "source": [
-    "//пример интерфейса\n",
+    "//Пример интерфейса\n",
     "public interface IAnimal\n",
     "{\n",
     "    void Start();\n",
     "    void Stop();\n",
-    "    int Eat();\n",
+    "    int GetNumberOfPaws();\n",
     "}\n",
     "\n",
-    "//Интерфейсы могут наследовать друг от друга\n",
-    "public interface IDoggiAnimal : IAnimal\n",
+    "//Реализация интерфейса\n",
+    "public class Dog : IAnimal\n",
     "{\n",
-    "    void Rev();\n",
-    "}\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака бежит\");\n",
+    "    }\n",
     "\n",
-    "//Интерфейсы могут быть реализованы в базовых классах и наследоваться в производных классах.\n",
-    "public abstract class Animal : IAnimal\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака лежит\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfPaws()\n",
+    "    {\n",
+    "        return 4;\n",
+    "    }\n",
+    "}\n",
+    "//Реализация интерфейса\n",
+    "public class Cat : IAnimal\n",
     "{\n",
-    "    public string Poroda { get; set; }\n",
-    "    public string Name { get; set; }\n",
-    "    protected int eat;\n",
-    "\n",
-    "    public abstract void Start();  // Оставляем абстрактным\n",
-    "    public abstract void Stop();   // Оставляем абстрактным\n",
-    "\n",
-    "    // Неявная реализация метода\n",
-    "    public virtual int Eat()\n",
+    "    public void Start()\n",
     "    {\n",
-    "        return eat;\n",
+    "        Console.WriteLine(\"Кошка бежит\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка лежит\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfPaws()\n",
+    "    {\n",
+    "        return 4;\n",
     "    }\n",
     "}\n",
     "\n",
-    "//реализация интерфейса в производном классе(наследование)\n",
-    "public class Cat : Animal\n",
+    "//Реализация интерфейса\n",
+    "public class Bird : IAnimal\n",
     "{\n",
-    "    // Явная реализация интерфейса\n",
-    "    public override void Start()\n",
+    "    public void Start()\n",
     "    {\n",
-    "        eat = 20;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} проснулся.\");\n",
+    "        Console.WriteLine(\"птичка летит\");\n",
     "    }\n",
     "\n",
-    "    public override void Stop()\n",
+    "    public void Stop()\n",
     "    {\n",
-    "        eat = 20;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} уснул.\");\n",
+    "        Console.WriteLine(\"птичка не летит\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfPaws()\n",
+    "    {\n",
+    "        return 2; \n",
     "    }\n",
     "}\n",
     "\n",
-    "//класс теперь может реализовать все методы из обоих интерфейсов \n",
-    "public class Dog : Animal, IDoggiAnimal\n",
+    "//Создадим класc, который будет зависеть от интерфейса IAnimal\n",
+    "public class AnimalDoc\n",
     "{\n",
-    "    public override void Start()\n",
+    "    private readonly IAnimal _animal;\n",
+    "\n",
+    "    // Внедрение зависимости через конструктор\n",
+    "    public AnimalDoc(IAnimal animal)\n",
     "    {\n",
-    "        eat = 0;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} проснулась.\");\n",
+    "        _animal = animal; \n",
     "    }\n",
     "\n",
-    "    public override void Stop()\n",
+    "    public void UseAnimal()\n",
     "    {\n",
-    "        eat = 0;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} уснула.\");\n",
-    "    }\n",
-    "\n",
-    "    public void Rev()\n",
-    "    {\n",
-    "        Console.WriteLine(\"Собака рычит!\");\n",
+    "        _animal.Start(); \n",
+    "        Console.WriteLine($\"У этого животного {_animal.GetNumberOfPaws()} лапы.\");\n",
+    "        _animal.Stop(); \n",
     "    }\n",
     "}\n",
     "\n",
-    "//реализация интерфейса в производном классе(наследование)\n",
-    "public class Bird : Animal\n",
-    "{\n",
-    "    public override void Start()\n",
-    "    {\n",
-    "        eat = 0;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} проснулся.\");\n",
-    "    }\n",
-    "\n",
-    "    public override void Stop()\n",
-    "    {\n",
-    "        eat = 0;\n",
-    "        Console.WriteLine($\"{Poroda} {Name} уснул.\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "Cat myCat = new Cat { Name = \"Лукас\", Poroda = \"Британский\" };\n",
-    "myCat.Start();\n",
-    "Console.WriteLine($\"Процент голодания: {myCat.Eat()} %\");\n",
-    "myCat.Stop();\n",
+    "IAnimal myDog = new Dog();\n",
+    "AnimalDoc dogd = new AnimalDoc(myDog); \n",
+    "dogd.UseAnimal(); \n",
     "Console.WriteLine();\n",
     "\n",
-    "Dog myDog = new Dog { Name = \"Кейси\", Poroda = \"Спаниель\" };\n",
-    "myDog.Start();\n",
-    "myDog.Rev();\n",
-    "myDog.Stop();\n",
+    "IAnimal myCat = new Cat();\n",
+    "AnimalDoc catd = new AnimalDoc(myCat); \n",
+    "catd.UseAnimal(); \n",
     "Console.WriteLine();\n",
     "\n",
-    "Bird myBird = new Bird { Name = \"Санни\", Poroda = \"Попугай\" };\n",
-    "myBird.Start();\n",
-    "myBird.Stop();"
+    "IAnimal myBird = new Bird(); \n",
+    "AnimalDoc bird = new AnimalDoc(myBird); \n",
+    "bird.UseAnimal();"
    ]
   }
  ],
